--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
 
 install:
   # install ocdev
+  - sudo apt-get update
   - sudo apt-get -y install python3-jinja2 python3-setuptools
   - sudo easy_install3 requests
   - sudo easy_install3 ocdev
