--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ env:
 matrix:
   allow_failures:
     - php: hhvm
-  include:
-    - php: 5.4
-      env: DB=sqlite
-    - php: 5.4
-      env: DB=pgsql
+#  include:
+#    - php: 5.4
+#      env: DB=sqlite
+#    - php: 5.4
+#      env: DB=pgsql
 
 
 install:
