--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
   allow_failures:
     - php: hhvm
     - env: DB=pgsql
+    - env: DB=sqlite
   include:
     - php: 5.4
       env: DB=sqlite
