added the codeclimate php-test-reporter

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,11 +44,13 @@ install:
 
 before_script:
   - cd apps/ownbackup
+  - composer require codeclimate/php-test-reporter --dev
 
 script:
   - phpunit -c phpunit.xml --coverage-clover build/logs/clover.xml
   - phpunit -c phpunit.integration.xml
   - cat build/logs/clover.xml
+  - CODECLIMATE_REPO_TOKEN=7ae7d983b3e92dd6da9faf33169bbef4a4c3b726a40480640899c70fdc4c79be ./vendor/bin/test-reporter
 
 addons:
     postgresql: "9.3"
