--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,11 @@ before_script:
 script:
   - phpunit -c phpunit.xml --coverage-clover build/logs/clover.xml
   - phpunit -c phpunit.integration.xml
-  # report to Code Climate
-  - CODECLIMATE_REPO_TOKEN=7ae7d983b3e92dd6da9faf33169bbef4a4c3b726a40480640899c70fdc4c79be ./vendor/bin/test-reporter
+
+after_script:
+  # report to Code Climate via curl
+  - CODECLIMATE_REPO_TOKEN="7ae7d983b3e92dd6da9faf33169bbef4a4c3b726a40480640899c70fdc4c79be" bin/test-reporter --stdout > codeclimate.json
+  - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
 
 addons:
     postgresql: "9.3"
