--- a/.travis.yml
+++ b/.travis.yml
@@ -4,47 +4,43 @@ php:
   - 5.5
   - 5.6
   - 7
+  - hhvm
 
 env:
   global:
+    - CORE_BRANCH=master
+    - APP_NAME=ownbackup
     - BRANCH=master
   matrix:
     - DB=mysql
 
 matrix:
   allow_failures:
+    - php: 5.4
     - php: 7
+    - php: hhvm
   include:
-    - php: 5.4
+    - php: 5.5
       env: DB=sqlite
-    - php: 5.4
+    - php: 5.5
       env: DB=pgsql
+    - php: 5.5
+      env: "DB=mysql CORE_BRANCH=stable8.1"
+    - php: 5.5
+      env: "DB=mysql CORE_BRANCH=stable8.2"
+  fast_finish: true
 
-
-install:
-  # install ocdev
+before_install:
   - sudo apt-get update
   - sudo apt-get -y install python3-jinja2 python3-setuptools
-  - sudo easy_install3 requests
-  - sudo easy_install3 ocdev
-  # set up postgresql
-  - createuser -U travis -s oc_autotest
-  # set up mysql
-  - mysql -e 'create database oc_autotest;'
-  - mysql -u root -e "CREATE USER 'oc_autotest'@'localhost' IDENTIFIED BY '';"
-  - mysql -u root -e "grant all on oc_autotest.* to 'oc_autotest'@'localhost';"
-  # install owncloud
-  - cd ..
-  - ocdev setup core --dir owncloud --branch $BRANCH --no-history
-  - mv ownbackup owncloud/apps
-  - phpenv config-add owncloud/apps/ownbackup/tests/travis/php.ini
-  - cd owncloud
-  - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --database-pass --admin-user admin --admin-pass admin --database $DB
-  - ./occ app:enable ownbackup
-  # update composer
-  - composer self-update
+  - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
+  - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
+  - cd ../core
+  - php occ app:enable $APP_NAME
+
 before_script:
-  - cd apps/ownbackup
+  - cd apps/$APP_NAME
+  #- composer self-update
   - composer require codeclimate/php-test-reporter --dev
 
 script:
