mysql doesn't seem to work in travis right now, we'll make it optional

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
     - php: 7
     - php: hhvm
     - env: DB=pgsql CORE_BRANCH=master
+    - env: DB=mysql
   include:
     - php: 5.5
       env: DB=sqlite
