--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 
 env:
   global:
-    - CORE_BRANCH=stable10
+    - CORE_BRANCH=stable13
     - APP_NAME=ownbackup
   matrix:
     - DB=pgsql
@@ -31,6 +31,16 @@ matrix:
       env: DB=sqlite
     - php: 5.6
       env: DB=mysql
+    - php: 5.6
+      env: DB=mysql CORE_BRANCH=stable10
+    - php: 5.6
+      env: DB=mysql CORE_BRANCH=stable11
+    - php: 5.6
+      env: DB=mysql CORE_BRANCH=stable12
+    - php: 5.6
+      env: DB=mysql CORE_BRANCH=v14.0.0beta3
+    - php: 5.6
+      env: DB=mysql CORE_BRANCH=master
     - php: 5.6
       env: DB=pgsql CORE_BRANCH=master
   fast_finish: true
