--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ env:
 
 matrix:
   allow_failures:
-    - php: 7
     - php: hhvm
     - env: DB=pgsql CORE_BRANCH=master
-    - env: DB=mysql
+    - env: DB=mysql CORE_BRANCH=master
+    - env: DB=mysql CORE_BRANCH=v14.0.0beta3
   include:
     - php: 5.6
       env: DB=sqlite
