--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 
 env:
   global:
-    - CORE_BRANCH=stable13
+    - CORE_BRANCH=stable15
     - APP_NAME=ownbackup
   matrix:
     - DB=pgsql
@@ -19,7 +19,8 @@ matrix:
     - php: hhvm
     - env: DB=pgsql CORE_BRANCH=master
     - env: DB=mysql CORE_BRANCH=master
-    - env: DB=mysql CORE_BRANCH=v14.0.0beta3
+    - env: DB=mysql CORE_BRANCH=stable14
+    - env: DB=mysql CORE_BRANCH=stable15
   include:
     - php: 5.6
       env: DB=sqlite
@@ -33,8 +34,12 @@ matrix:
       env: DB=mysql CORE_BRANCH=stable11
     - php: 5.6
       env: DB=mysql CORE_BRANCH=stable12
+    - php: 5.6
+      env: DB=mysql CORE_BRANCH=stable13
     - php: 7.2
-      env: DB=mysql CORE_BRANCH=v14.0.0beta3
+      env: DB=mysql CORE_BRANCH=stable14
+    - php: 7.2
+      env: DB=mysql CORE_BRANCH=stable15
     - php: 7.2
       env: DB=mysql CORE_BRANCH=master
     - php: 7.2
