--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ matrix:
       env: DB=mysql CORE_BRANCH=stable14
     - php: 7.2
       env: DB=mysql CORE_BRANCH=stable15
+    - php: 7.2
+      env: DB=mysql CORE_BRANCH=stable16
 #    - php: 7.2
 #      env: DB=mysql CORE_BRANCH=master
 #    - php: 7.2
