--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
     - env: DB=mysql CORE_BRANCH=master
     - env: DB=mysql CORE_BRANCH=stable14
     - env: DB=mysql CORE_BRANCH=stable15
+    - env: DB=mysql CORE_BRANCH=stable16
   include:
     - php: 5.6
       env: DB=sqlite
