--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,8 @@ before_script:
   - mkdir data
   - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database $DB --database-pass=''
   - ./occ app:enable $APP_NAME
-  - ./occ app:check-code $APP_NAME
+  # the api ownbackup is using is deprecated since NC 14
+  #- ./occ app:check-code $APP_NAME
   - ./occ background:cron  # enable default cron
   - php -S localhost:8080 &
   - cd apps/$APP_NAME
