--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
     - env: DB=mysql CORE_BRANCH=stable14
     - env: DB=mysql CORE_BRANCH=stable15
     - env: DB=mysql CORE_BRANCH=stable16
+    - env: DB=pgsql CORE_BRANCH=stable17
   include:
     - php: 5.6
       env: DB=sqlite
