--- a/.travis.yml
+++ b/.travis.yml
@@ -45,12 +45,24 @@ matrix:
       env: DB=mysql CORE_BRANCH=stable15
     - php: 7.2
       env: DB=mysql CORE_BRANCH=stable16
-    - php: 7.2
+    - php: 7.3
       env: DB=mysql CORE_BRANCH=stable17
     - php: 7.3
       env: DB=mysql CORE_BRANCH=stable17
     - php: 7.3
       env: DB=pgsql CORE_BRANCH=stable17
+    - php: 7.3
+      env: DB=mysql CORE_BRANCH=stable18
+    - php: 7.3
+      env: DB=mysql CORE_BRANCH=stable18
+    - php: 7.3
+      env: DB=pgsql CORE_BRANCH=stable18
+    - php: 7.4
+      env: DB=mysql CORE_BRANCH=stable19
+    - php: 7.4
+      env: DB=mysql CORE_BRANCH=stable19
+    - php: 7.4
+      env: DB=pgsql CORE_BRANCH=stable19
   fast_finish: true
 
 before_install:
