--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,7 +15,9 @@ services:
       - nextcloud:/var/www/html
       - ..:/var/www/html/custom_apps/nextbackup
       - ./nextcloud/certificates:/var/www/.nextcloud/certificates
+      - ./owncloud/certificates:/var/www/.owncloud/certificates
       - ./nextcloud/sign-app.sh:/var/www/sign-app.sh
+      - ./owncloud/sign-app.sh:/var/www/sign-app-owncloud.sh
       - ./nextbackup.config.php:/var/www/html/config/nextbackup.config.php
 
 volumes:
